--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "d\n",
+    "dictionary.get()\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
