automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "\n",
+    "print(len(ma))\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
