--- a/index.ipynb
+++ b/index.ipynb
@@ -81,12 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "119846\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "print(len(ma))\n",
+    "print(len(macbeth))\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
