automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,9 @@
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
+    "dictionary.get()\n",
     "# Iterate through the text of Macbeth\n",
+    "for word in \n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels"
