automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,8 @@
     "# Create a dictionary\n",
     "dictionary.get()\n",
     "# Iterate through the text of Macbeth\n",
-    "for word in \n",
+    "for word in macbeth:\n",
+    "    \n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels"
