--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
     "# Iterate through the text of Macbeth\n",
     "\n",
     "for word in macbeth:\n",
-    "    if dict\n",
+    "    if dictionary.get(word)\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels"
