--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,7 @@
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
-    "dictionary.get()\n",
+    "unique_word\n",
     "# Iterate through the text of Macbeth\n",
     "\n",
     "for word in macbeth:\n",
