automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,11 +98,11 @@
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
-    "unique_word\n",
+    "unique_words\n",
     "# Iterate through the text of Macbeth\n",
     "\n",
     "for word in macbeth:\n",
-    "    if dictionary.get(word)\n",
+    "    if unique_words.get(word) == True\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels"
