automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,8 @@
     "# Iterate through the text of Macbeth\n",
     "\n",
     "for word in macbeth:\n",
-    "    if unique_words.get(word) == True\n",
+    "    if unique_words.get(word) == True:\n",
+    "        unique_words\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels"
