automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,8 @@
     "\n",
     "for word in macbeth:\n",
     "    if unique_words.get(word) == True:\n",
-    "        unique_words\n",
+    "        unique_words[word] += 1\n",
+    "    el\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels"
