automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,8 @@
     "for word in macbeth:\n",
     "    if unique_words.get(word) == True:\n",
     "        unique_words[word] += 1\n",
-    "    el\n",
+    "    else:\n",
+    "        uni\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels"
