automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,8 @@
     "    if unique_words.get(word) == True:\n",
     "        unique_words[word] += 1\n",
     "    else:\n",
-    "        uni\n",
+    "        unique_words[word] = 1\n",
+    "\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels"
