automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,8 @@
     "\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
-    "# Include descriptive titles and labels"
+    "# Include descriptive titles and labels\n",
+    "pl"
    ]
   },
   {
