--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
-    "plt.title('')"
+    "plt.title('Most Common Words in Macbeth')"
    ]
   },
   {
