automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,8 @@
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
-    "plt.title('Most Common Words in Macbeth')"
+    "plt.title('Most Common Words in Macbeth')\n",
+    "plt.xlabel('Word')\n"
    ]
   },
   {
