automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,9 @@
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
     "plt.title('Most Common Words in Macbeth')\n",
-    "plt.xlabel('Word')\n"
+    "plt.xlabel('Word')\n",
+    "plt.ylabel('Number of Instances')\n",
+    "plt/"
    ]
   },
   {
