--- a/index.ipynb
+++ b/index.ipynb
@@ -109,11 +109,12 @@
     "\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
+    "plt.bar(x,)\n",
     "# Include descriptive titles and labels\n",
     "plt.title('Most Common Words in Macbeth')\n",
     "plt.xlabel('Word')\n",
     "plt.ylabel('Number of Instances')\n",
-    "plt/"
+    "plt.show()"
    ]
   },
   {
