automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
-    "plt.bar(x,)\n",
+    "plt.bar(x)\n",
     "# Include descriptive titles and labels\n",
     "plt.title('Most Common Words in Macbeth')\n",
     "plt.xlabel('Word')\n",
