--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "        unique_words[word] = 1\n",
     "\n",
     "# Update word counts\n",
-    "unique\n",
+    "unique_words.keys()\n",
     "# Create Bar Graph\n",
     "plt.bar(x)\n",
     "# Include descriptive titles and labels\n",
