--- a/index.ipynb
+++ b/index.ipynb
@@ -108,8 +108,8 @@
     "        unique_words[word] = 1\n",
     "\n",
     "# Update word counts\n",
-    "sort(list(unique_words.keys()))\n",
-    "\n",
+    "sorted_words = sort(list(unique_words.keys()))\n",
+    "sorted_words[]\n",
     "# Create Bar Graph\n",
     "plt.bar(x)\n",
     "# Include descriptive titles and labels\n",
