--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "# Update word counts\n",
     "sorted_words = sort(list(unique_words.keys()))\n",
-    "sorted_words[]\n",
+    "x = sorted_words[-9:]\n",
     "# Create Bar Graph\n",
     "plt.bar(x)\n",
     "# Include descriptive titles and labels\n",
