automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,6 +97,7 @@
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
+    "words = macbeth.spli\n",
     "# Create a dictionary\n",
     "unique_words\n",
     "# Iterate through the text of Macbeth\n",
