automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,9 +97,9 @@
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
-    "words = macbeth.spli\n",
+    "words = macbeth.split()\n",
     "# Create a dictionary\n",
-    "unique_words\n",
+    "unique_words = {}\n",
     "# Iterate through the text of Macbeth\n",
     "\n",
     "for word in macbeth:\n",
