automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
     "        unique_words[word] = 1\n",
     "\n",
     "# Update word counts\n",
-    "sorted_words = sort_values(list(unique_words.keys()))\n",
+    "sorted_words = list(unique_words.keys())\n",
     "x = sorted_words[-9:]\n",
     "# Create Bar Graph\n",
     "plt.bar(x)\n",
