--- a/index.ipynb
+++ b/index.ipynb
@@ -81,21 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-bb6650656bab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mlist_of_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_words\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0msorted_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist_of_words\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted_words\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;31m# Create Bar Graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "\n",
@@ -115,14 +103,15 @@
     "# Update word counts\n",
     "list_of_words = list(unique_words.keys())\n",
     "sorted_words = list_of_words.sort()\n",
-    "x = sorted_words[-9:]\n",
-    "# Create Bar Graph\n",
-    "plt.bar(x)\n",
-    "# Include descriptive titles and labels\n",
-    "plt.title('Most Common Words in Macbeth')\n",
-    "plt.xlabel('Word')\n",
-    "plt.ylabel('Number of Instances')\n",
-    "plt.show()"
+    "sorted_words\n",
+    "# x = sorted_words[-9:]\n",
+    "# # Create Bar Graph\n",
+    "# plt.bar(x)\n",
+    "# # Include descriptive titles and labels\n",
+    "# plt.title('Most Common Words in Macbeth')\n",
+    "# plt.xlabel('Word')\n",
+    "# plt.ylabel('Number of Instances')\n",
+    "# plt.show()"
    ]
   },
   {
