automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
@@ -103,7 +111,7 @@
     "# Update word counts\n",
     "list_of_words = list(unique_words.keys())\n",
     "sorted_words = list_of_words.sort()\n",
-    "sorted_words\n",
+    "\n",
     "# x = sorted_words[-9:]\n",
     "# # Create Bar Graph\n",
     "# plt.bar(x)\n",
