automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -94,6 +94,11 @@
    ],
    "source": [
     "# Your code here\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
@@ -111,7 +116,6 @@
     "# Update word counts\n",
     "list_of_words = list(unique_words.keys())\n",
     "sorted_words = list_of_words.sort()\n",
-    "print(list_of_words)\n",
     "# x = sorted_words[-9:]\n",
     "# # Create Bar Graph\n",
     "# plt.bar(x)\n",
