--- a/index.ipynb
+++ b/index.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['\\n', '\\r', ' ', '!', '\"', '#', '$', '%', '&', \"'\", '(', ')', '*', '+', ',', '-', '.', '/', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', ':', ';', '<', '=', '>', '?', '@', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', '[', ']', '_', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', '~', '\\ufeff']\n"
+      "{'\\ufeff': 1, '*': 1, 'T': 2, 'h': 2, 'e': 1, ' ': 2, 'P': 2, 'r': 1, 'o': 1, 'j': 2, 'c': 2, 't': 2, 'G': 2, 'u': 1, 'n': 1, 'b': 1, 'g': 2, \"'\": 2, 's': 2, 'E': 2, 'x': 1, 'f': 2, 'S': 1, 'a': 1, 'k': 1, 'p': 2, 'F': 2, 'i': 1, 'l': 2, '\\r': 2, '\\n': 2, 'd': 2, 'M': 2, '3': 2, 'm': 2, 'y': 1, '.': 2, 'C': 1, 'w': 1, 'v': 1, ',': 2, '!': 2, 'W': 1, 'D': 2, 'V': 1, 'R': 1, 'B': 2, 'H': 2, '1': 1, '9': 2, '7': 1, 'I': 2, 'J': 2, '2': 1, '0': 1, '[': 1, '#': 1, '6': 1, '4': 1, ']': 1, 'z': 2, 'U': 1, 'N': 1, 'O': 1, ':': 1, 'A': 1, '(': 1, ')': 2, '$': 1, '-': 2, '+': 1, '%': 1, '=': 2, '~': 2, '5': 2, ';': 2, '\"': 2, '/': 1, '8': 2, 'L': 2, '<': 1, '@': 1, '>': 1, 'Y': 1, 'X': 2, '?': 2, 'q': 2, 'Q': 1, 'K': 1, '_': 1, '&': 2}\n"
      ]
     }
    ],
@@ -116,6 +116,7 @@
     "# Update word counts\n",
     "list_of_words = list(unique_words.keys())\n",
     "sorted_words = list_of_words.sort()\n",
+    "print(unique_words)\n",
     "# x = sorted_words[-9:]\n",
     "# # Create Bar Graph\n",
     "# plt.bar(x)\n",
