automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'\\ufeff': 1, '*': 1, 'T': 2, 'h': 2, 'e': 1, ' ': 2, 'P': 2, 'r': 1, 'o': 1, 'j': 2, 'c': 2, 't': 2, 'G': 2, 'u': 1, 'n': 1, 'b': 1, 'g': 2, \"'\": 2, 's': 2, 'E': 2, 'x': 1, 'f': 2, 'S': 1, 'a': 1, 'k': 1, 'p': 2, 'F': 2, 'i': 1, 'l': 2, '\\r': 2, '\\n': 2, 'd': 2, 'M': 2, '3': 2, 'm': 2, 'y': 1, '.': 2, 'C': 1, 'w': 1, 'v': 1, ',': 2, '!': 2, 'W': 1, 'D': 2, 'V': 1, 'R': 1, 'B': 2, 'H': 2, '1': 1, '9': 2, '7': 1, 'I': 2, 'J': 2, '2': 1, '0': 1, '[': 1, '#': 1, '6': 1, '4': 1, ']': 1, 'z': 2, 'U': 1, 'N': 1, 'O': 1, ':': 1, 'A': 1, '(': 1, ')': 2, '$': 1, '-': 2, '+': 1, '%': 1, '=': 2, '~': 2, '5': 2, ';': 2, '\"': 2, '/': 1, '8': 2, 'L': 2, '<': 1, '@': 1, '>': 1, 'Y': 1, 'X': 2, '?': 2, 'q': 2, 'Q': 1, 'K': 1, '_': 1, '&': 2}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "\n",
@@ -107,7 +99,7 @@
     "unique_words = {}\n",
     "# Iterate through the text of Macbeth\n",
     "\n",
-    "for word in macbeth:\n",
+    "for word in words:\n",
     "    if unique_words.get(word) == True:\n",
     "        unique_words[word] += 1\n",
     "    else:\n",
@@ -116,6 +108,7 @@
     "# Update word counts\n",
     "list_of_words = list(unique_words.keys())\n",
     "sorted_words = list_of_words.sort()\n",
+    "print\n",
     "# x = sorted_words[-9:]\n",
     "# # Create Bar Graph\n",
     "# plt.bar(x)\n",
