automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,8 +116,8 @@
     "# Update word counts\n",
     "list_of_words = list(unique_words.keys())\n",
     "sorted_words = list_of_words.sort()\n",
-    "print(unique_words)\n",
-    "# x = sorted_words[-9:]\n",
+    "x = sorted_words[-9:]\n",
+    "print\n",
     "# # Create Bar Graph\n",
     "# plt.bar(x)\n",
     "# # Include descriptive titles and labels\n",
