automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "# Iterate through the text of Macbeth\n",
     "\n",
     "for word in words:\n",
-    "    if unique_words.get(word) == True:\n",
+    "    if unique_words.get(word) != 0:\n",
     "        unique_words[word] += 1\n",
     "    else:\n",
     "        unique_words[word] = 1\n",
