automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,7 @@
     "# Iterate through the text of Macbeth\n",
     "\n",
     "for word in words:\n",
-    "    if word in unique_words\n",
+    "    if word in unique_words:\n",
     "        unique_words[word] += 1\n",
     "    else:\n",
     "        unique_words[word] = 1\n",
