automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,16 +115,16 @@
     "\n",
     "# Update word counts\n",
     "list_of_words = list(unique_words.keys())\n",
-    "sorted_words = list_of_words.sort()\n",
-    "print(unique_words)\n",
-    "# x = sorted_words[-9:]\n",
-    "# # Create Bar Graph\n",
-    "# plt.bar(x)\n",
-    "# # Include descriptive titles and labels\n",
-    "# plt.title('Most Common Words in Macbeth')\n",
-    "# plt.xlabel('Word')\n",
-    "# plt.ylabel('Number of Instances')\n",
-    "# plt.show()"
+    "# sorted_words = list_of_words.sort()\n",
+    "# print(unique_words)\n",
+    "\n",
+    "# Create Bar Graph\n",
+    "plt.bar(x)\n",
+    "# Include descriptive titles and labels\n",
+    "plt.title('Most Common Words in Macbeth')\n",
+    "plt.xlabel('Word')\n",
+    "plt.ylabel('Number of Instances')\n",
+    "plt.show()"
    ]
   },
   {
