--- a/index.ipynb
+++ b/index.ipynb
@@ -114,17 +114,19 @@
     "        unique_words[word] = 1\n",
     "\n",
     "# Update word counts\n",
-    "list_of_words = list(unique_words.keys())\n",
+    "# list_of_words = list(unique_words.keys())\n",
     "# sorted_words = list_of_words.sort()\n",
     "# print(unique_words)\n",
-    "\n",
+    "counts = pd.DataFrame.from_dict(unique_words, orient='index')\n",
+    "counts = counts.sort_values(by=counts.columns[0], ascending=False)\n",
+    "counts.head(25).plot(kind='barh')\n",
     "# Create Bar Graph\n",
-    "plt.bar(x)\n",
-    "# Include descriptive titles and labels\n",
-    "plt.title('Most Common Words in Macbeth')\n",
-    "plt.xlabel('Word')\n",
-    "plt.ylabel('Number of Instances')\n",
-    "plt.show()"
+    "# plt.bar(x)\n",
+    "# # Include descriptive titles and labels\n",
+    "# plt.title('Most Common Words in Macbeth')\n",
+    "# plt.xlabel('Word')\n",
+    "# plt.ylabel('Number of Instances')\n",
+    "# plt.show()"
    ]
   },
   {
